# forex-dagster

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  repository.py  requirements.txt  resources.py  workspace.yaml
app/: repository.py
app/experiment/: __init__.py  assets.py  job.py  repository.py
app/missing_data/: assets.py  job.py  repository.py
app/missing_data/assets/: raws_data_asset.py
docker/: dagster.Dockerfile  user_code.Dockerfile
notebooks/: 01_collect_missing_data.ipynb
scrapy/twelve_data/: items.py
scrapy/twelve_data/spiders/: time_series.py
scrapy/utils/: twelve_data.py
utils/: gcs.py  pyspark_gcs.py
