[tool.poetry]
name = "forex-dagster"
version = "0.1.0"
description = "Forex prediction pipeline by Dagster"
authors = ["Kittawee Kognpan <kittawee9469@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
dagster = "^1.5.9"
dagit = "^1.5.9"
scrapy = "==2.9.0"
twisted = "==22.10.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
