[tool.poetry]
name = "forex-dagster"
version = "0.1.0"
description = "Forex prediction pipeline by Dagster"
authors = ["Kittawee Kognpan <kittawee9469@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dagster = "^1.5.9"
# python-dotenv = "^1.0.0"
google-cloud-storage = "^2.14.0"
pyspark = "^3.5.0"
scikit-learn = "^1.4.1.post1"
dagster-postgres = "^0.22.6"
dagster-docker = "^0.22.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
jupyter-black = "^0.3.4"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
